--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     --color-white-95: #f1f1f3;
     --color-white-99: #fcfcfd;
     --color-orange-50: #ff9500;
+    --color-secondary: #19183B;
     --color-orange-90: #ffeacc;
     --color-orange-70: #ffbf66;
     --color-orange-75: #ffca80;
@@ -51,7 +52,7 @@
 
 @layer components {
     .primary-btn {
-        @apply bg-orange-50 text-white px-6 py-3 rounded-lg font-semibold hover:bg-orange-50/90 transition-colors;
+        @apply bg-secondary text-white px-6 py-3 rounded-lg font-semibold hover:bg-secondary/90 transition-colors;
     }
     .secondary-btn {
         @apply px-6 py-3 bg-white border border-white-95 rounded-md hover:bg-orange-90 transition-colors;
@@ -76,5 +77,5 @@
 }
 
 .navbar.active {
-    @apply translate-x-0 transition-all duration-400
+    @apply translate-x-0 transition-all duration-400 w-1/3
 }
